@@ -1,0 +1,24 @@
+"""rmove blog title unique
+
+Revision ID: 140690d9bf74
+Revises: 30d48827b2f
+Create Date: 2014-07-07 09:44:12.128000
+
+"""
+
+# revision identifiers, used by Alembic.
+revision = '140690d9bf74'
+down_revision = '30d48827b2f'
+
+from alembic import op
+import sqlalchemy as sa
+from sqlalchemy.dialects import mysql
+
+def upgrade():
+    ### commands auto generated by Alembic - please adjust! ###
+    op.drop_constraint(u'uq__blog_blog__title', 'blog_blog', type_='unique')
+    ### end Alembic commands ###
+def downgrade():
+    ### commands auto generated by Alembic - please adjust! ###
+    op.create_unique_constraint(u'uq__blog_blog__title', 'blog_blog', ['title'])
+    ### end Alembic commands ###
