@@ -14,10 +14,10 @@ class CaptchaWidget(object):
     #----------------------------------------------------------------------
     def __call__(self, field, **kwargs):
         html  = "<div class='row'>\
-                    <div class='col-md-2'>\
+                    <div class='col-md-3'>\
                         <a href='#' class='captcha'></a>\
                     </div>\
-                    <div class='col-md-10'>\
+                    <div class='col-md-9'>\
                         <input %s/>\
                     </div>\
                 </div>"
