@@ -1,5 +1,14 @@
 {% extends "base/base.html" %}
 {% block logo %}
-<a class="navbar-brand" href="{{ url_for('blog.list_blog') }}">Job</a>
+<a class="navbar-brand" href="{{ url_for('job.list_job') }}">Job</a>
 {% endblock logo %}
 
+{% block actionbar %}
+<div class="row">
+	<div class="col-md-12">
+		<div class="btn-group pull-right" style="margin-bottom: 12px">
+			<a href="{{url_for('.list_job')}}" type="button" class="btn btn-success">{{_('Job list')}}</a>
+		</div>
+	</div>
+</div>
+{% endblock actionbar %}
