@@ -1,0 +1,38 @@
+{% extends "job/base.html" %}
+
+{% from "macros/fieldmacros.html" import render_error %}
+
+{% block title %}
+{{_('Report job')}}
+{% endblock title%}
+
+{% block actionbar %}
+<div class="row">
+	<div class="col-md-12">
+		<div class="btn-group pull-right" style="margin-bottom: 12px">
+			<a href="{{url_for('.list_job')}}" type="button" class="btn btn-default">{{_('Job list')}}</a>
+		</div>
+	</div>
+</div>
+{% endblock actionbar %}
+
+{% block container %}
+<div class="col-md-12">
+	{% include "macros/_messages.html" %}
+	<form class="form-horizontal" method="post" action="{{url_for('.report_job',job_id=job_id)}}" name="report_form">
+		{{ report_form.hidden_tag() }}
+		<div class="form-group">
+			{{report_form.content.label}}
+			{{report_form.content(class="form-control", rows=10)}}
+			{{render_error(report_form.content)}}
+		</div>
+		<div class="form-group">
+			{{report_form.captcha(class="form-control", placeholder=_("repeat captcha"))}}
+			{{render_error(report_form.captcha)}}
+		</div>
+		<div class="form-group">
+			<button class="btn btn-lg btn-primary btn-block" type="submit">{{_('Submit')}}</button>
+		</div>
+	</form>
+</div>
+{% endblock container %}
