@@ -1,0 +1,32 @@
+{% extends "Job/base.html" %}
+
+{% from "macros/_pager.html" import render_pager %}
+
+{% block title %}
+{{job.title}} —— {{_('Report list')}}
+{% endblock title%}
+
+{% block actionbar %}
+<div class="row">
+	<div class="col-md-12">
+		<div class="btn-group pull-right" style="margin-bottom: 12px">
+			<a href="{{url_for('.detail_job', job_id=job.id)}}" type="button" class="btn btn-default">{{_('Back')}}</a>
+			<a href="{{url_for('.list_job')}}" type="button" class="btn btn-success">{{_('Job list')}}</a>
+		</div>
+	</div>
+</div>
+{% endblock actionbar %}
+
+{% block rightmain %}
+	{% for report in reports %}
+	<div class="row">
+		<div class="col-md-12 item">
+			<dl>
+				<dt>{{report.create_at}}</dt>
+				<dl>{{report.content}}</dl>
+			</dl>
+			<hr/>
+		</div>
+	</div>
+	{% endfor %}
+{% endblock %}
