@@ -1,7 +1,7 @@
 {%- with messages = get_flashed_messages(with_categories=true) -%}
 
 {% if messages %}
-<div class="alert alert-warning fade in">
+<div class="alert alert-success fade in">
 	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
 	<ul class="list-unstyled">
 		{% for category, message in messages %}
