@@ -8,7 +8,6 @@
 
 {% block rightmain %}
 <div class="col-md-4 col-md-offset-1">
-	{% include "macros/_messages.html" %}
 	<form class="form-horizontal" method="post" action="{{ url_for_security('change_password') }}" name="change_password_form">
 		{{ change_password_form.hidden_tag() }}
 		<div class="form-group">
