@@ -7,7 +7,7 @@
 {% endblock title%}
 
 {% block container %}
-{% include "macros/_messages.html" %}
+<div class="col-md-12">
 <form class="form-horizontal" action="{{ url_for_security('forgot_password') }}" method="post" name="forgot_password_form">
 	{{ forgot_password_form.hidden_tag() }}
 	<h2>{{_('Send password reset instructions')}}</h2>
@@ -21,4 +21,5 @@
 	</div>
 	<input type="hidden" name="next" value="{{ next }}" />
 </form>
+</div>
 {% endblock %}
