@@ -7,12 +7,7 @@
 {% endblock title%}
 
 {% block container %}
-
-<div class='row'>
-	<div class="col-md-8">
-		{% include "macros/_messages.html" %}
-	</div>
-	<div class="col-md-4">
+	<div class="col-md-4 col-md-offset-8">
 		<form class="form-horizontal" action="{{ url_for_security('login') }}" method="post" name="login_user_form">
 			{{ login_user_form.hidden_tag() }}
 			<h2>{{_('Login')}}</h2>
@@ -53,6 +48,4 @@
 			</a>
 		</div>
 	</div>
-
-</div>
 {% endblock %}
