@@ -43,6 +43,12 @@ body { padding-bottom: 71px; }
     <![endif]-->
 </head>
 <body>
+<div class="container">
+<div class="row">
+  <div class="col-md-1 border-r">.col-md-1 如果这是中文的话怎么办</div>
+  <div class="col-md-1 border-g">.col-md-1</div>
+</div>
+</div>
 
 	<script src="{{ url_for('static', filename='base/3partylib/jquery/jquery.min.js') }}"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
