@@ -1,7 +1,10 @@
 #-*- coding:utf-8 -*-
 from ..core import Service
-from .models import Job
+from .models import Job, Report
 
 class JobService(Service):
     __model__ = Job
 
+
+class ReportService(Service):
+    __model__ = Report
