@@ -9,7 +9,8 @@
 """
 
 from flask_wtf import Form
-from wtforms.fields import TextField, HiddenField, SelectField
+from wtforms.fields import TextField, IntegerField, SelectField, TextAreaField
+from wtforms.widgets import HiddenInput
 from wtforms.validators import Required, Length
 from flask_babel import gettext
 
@@ -18,9 +19,19 @@ from ..framework.wtfext.fields import CaptchaField
 
 ########################################################################
 class JobForm(Form):
-	id = HiddenField(u'id', default=None)
+	id = IntegerField(u'id', default=0, widget=HiddenInput())
 	title = TextField(gettext(u'Title'), validators=[Required()])
 	job_type = SelectField(gettext(u'Job type'), choices=[(0, gettext(u'Part time job')), (1, gettext(u'Full time job'))], coerce=int)
-	content = CKEditorField(gettext(u'Detail'), import_js=True, validators=[CKEditorRequired(message=gettext('The comment forgot you~'))],
+	content = CKEditorField(gettext(u'Job detail'), import_js=True, validators=[CKEditorRequired(message=gettext('The comment forgot you~'))],
 	                        ckeditor_config_file_path='base/ckeditor-job-config.js')
 	captcha = CaptchaField()
+
+
+########################################################################
+class JobReportForm(Form):
+	"""Form for reporting a job"""
+
+	id = IntegerField(u'id', default=0, widget=HiddenInput())
+	content = TextAreaField(gettext(u'Report content'), validators=[Required(), Length(min=30)])
+	captcha = CaptchaField()
+
