@@ -17,7 +17,23 @@ class Job(db.Model, ModelVersion, JsonSerializer):
 	title = db.Column(db.String(80))
 	content = db.Column(db.String(5120))
 	job_type = db.Column(db.Integer())
+	delete = db.Column(db.Boolean(name='deleted'), default=False, nullable=False)
 
 	# commentor
 	user_id = db.Column(db.Integer(), db.ForeignKey('security_user.id'))
 	user = db.relationship('User', backref=db.backref('pub_jobs', uselist=True, lazy='dynamic'))
+
+	reports = db.relationship('Report', uselist=True, lazy='dynamic')
+
+
+########################################################################
+class Report(db.Model, ModelVersion, JsonSerializer):
+	""""""
+	__tablename__ = 'job_report'
+	id = db.Column(db.Integer(), primary_key=True)
+	content = db.Column(db.String(1024), nullable=False)
+	job_id = db.Column(db.Integer(), db.ForeignKey('job_job.id'))
+	# Only audit report can be seen
+	is_audit = db.Column(db.Boolean(name='is_audit'), default=False)
+
+
