@@ -1,16 +1,27 @@
-flask == 0.10.1
-flask-admin == 1.0.8
-flask-babel == 0.9
-flask-script == 0.6.6
-flask-sqlalchemy == 1.0
-flask-security == 1.7.1
-flask-testing >= 0.4.1
-xlrd == 0.9.2
-pinyin == 0.2.4
-sqlalchemy == 0.9.4
-simplejson == 3.4.0
-factory-boy == 2.3.1
-alembic == 0.6.4
-sanction == 0.4.1
-wheezy.captcha
-pillow
+alembic ==0.6.5
+factory-boy ==2.3.1
+flask ==0.10.1
+Flask-Admin ==1.0.8
+flask-babel ==0.9
+Flask-BabelEx ==0.9.1
+Flask-Login ==0.2.11
+flask-mail ==0.9.0
+flask-openid ==1.2.1
+flask-principal ==0.4.0
+flask-script ==0.6.6
+Flask-Security ==1.7.3
+Flask-SQLAlchemy ==1.0
+Flask-Testing ==0.4.1
+Flask-WTF ==0.9.5
+MySQL-python ==1.2.4
+nose ==1.3.1
+Pillow ==2.4.0
+pinyin ==0.2.4
+sanction ==0.4.1
+simplejson ==3.4.0
+sphinx ==1.2.2
+SQLAlchemy ==0.9.6
+sqlalchemy-migrate ==0.9
+wheezy.captcha ==0.1.29
+wtforms ==1.0.5
+xlrd ==0.9.2
