@@ -1,3 +1,8 @@
+2014-07-07
+1.更新了alembic，不然不可能删除mysql的unique的约束
+2.在core的new方法里判断id并去掉。id为0的情况会使得返回的model不可访问。创建新的实体不应用有id.
+3.增加工作模块。
+
 2014-06-20
 1.fix:翻译会被空格截断的问题：原来是缺少了引用号~在大括号上再加一次引用就好了。
 
